--- a/index.html
+++ b/index.html
@@ -2,30 +2,58 @@
 <html lang="en">
 
 <head>
-    <title>anchi84!</title>
+    <title>Portfolio!</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/anchi84.css">
 </head>
 
 <body>
-    <h1>Hello, world!</h1>
-    <div class="container-fluid bg-1 text-center">
-        <h3>Who Am I?</h3>
-        <img src="bird.jpg" class="img-circle" alt="Bird">
-        <h3>I'm an adventurer</h3>
+    <!-- Navbar -->
+    <nav class="navbar navbar-default">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">Me</a>
+            </div>
+            <div class="collapse navbar-collapse" id="myNavbar">
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="#whoami">Who am I?</a></li>
+                    <li><a href="#project">My projects</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <!-- Who am I? -->
+    <div class="container-fluid bg-1 text-center" id="whoami">
+        <h3 class="margin">Who am I?</h3>
+        <img src=" " class="img-circle" alt="my photo" width="350" height="350">
+        <h3 class="margin">I am front-end web developer.</h3>
     </div>
-    <div class="container-fluid bg-2 text-center">
-        <h3>What Am I?</h3>
-        <p>Lorem ipsum..</p>
+    <!-- My projects -->
+    <div class="container-fluid bg-2 text-center" id="project">
+        <h3 class="margin">My projects</h3>
+        <p><a href="https://anchi84.github.io/Pomodorist/">Pomodorist</a></p>
     </div>
-    <div class="container-fluid bg-3 text-center">
-        <h3>Where To Find Me?</h3>
-        <p>Lorem ipsum..</p>
+    <!-- Contact -->
+    <div class="container-fluid bg-3 text-center" id="contact">
+        <h3 class="margin">Contact</h3>
+        <small>Email me: </small><a href="mailto:anarili@gmail.com">anarili@gmail.com</a>
     </div>
+    <!-- Footer -->
+    <footer class="container-fluid bg-4">
+        <p>&copy; Anchi 2017</p>
+    </footer>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
