--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Google fonts -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
     <!-- Bootstrap CSS -->
@@ -23,7 +24,6 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Me</a>
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav navbar-right">
@@ -37,7 +37,7 @@
     <!-- Who am I? -->
     <div class="container-fluid bg-1 text-center" id="whoami">
         <h3 class="margin">Who am I?</h3>
-        <img src=" " class="img-circle" alt="my photo" width="350" height="350">
+        <img src="img/myphoto.jpg" class="img-circle" alt="my photo" width="350" height="auto">
         <h3 class="margin">I am front-end web developer.</h3>
     </div>
     <!-- My projects -->
