add new project

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
     <div class="container-fluid bg-2 text-center" id="project">
         <h3 class="margin">My projects</h3>
         <p><a href="https://anchi84.github.io/Pomodorist/">Pomodorist</a></p>
+        <p><a href="https://anchi84.github.io/jmbg/">JMBG Validator</a></p>
     </div>
     <!-- Contact -->
     <div class="container-fluid bg-3 text-center" id="contact">
