--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
         <h3 class="margin">My projects</h3>
         <p><a href="https://anchi84.github.io/Pomodorist/">Pomodorist</a></p>
         <p><a href="https://anchi84.github.io/jmbg/">JMBG Validator</a></p>
+        <p><a href="https://anchi84.github.io/webcel/">Webcel</a></p>
+        <p><a href="https://anchi84.github.io/tictactoe/">Tic-Tac-Toe</a></p>
     </div>
     <!-- Contact -->
     <div class="container-fluid bg-3 text-center" id="contact">
