--- a/index.html
+++ b/index.html
@@ -43,10 +43,12 @@
     <!-- My projects -->
     <div class="container-fluid bg-2 text-center" id="project">
         <h3 class="margin">My projects</h3>
-        <p><a href="https://anchi84.github.io/Pomodorist/">Pomodorist</a></p>
-        <p><a href="https://anchi84.github.io/jmbg/">JMBG Validator</a></p>
-        <p><a href="https://anchi84.github.io/webcel/">Webcel</a></p>
-        <p><a href="https://anchi84.github.io/tictactoe/">Tic-Tac-Toe</a></p>
+        <p><a href="https://anchi84.github.io/webcel/" target="_blank">Webcel</a></p>
+        <p><a href="https://anchi84.github.io/vincent-canvas/" target="_blank">Canvas</a></p>
+        <p><a href="https://anchi84.github.io/passwordStrengthChecker/" target="_blank">Password Strength Checker</a></p>
+        <p><a href="https://anchi84.github.io/Pomodorist/" target="_blank">Pomodorist</a></p>
+        <p><a href="https://anchi84.github.io/jmbg/" target="_blank">JMBG Validator</a></p>
+        <!-- <p><a href="https://anchi84.github.io/tictactoe/" target="_blank">Tic-Tac-Toe</a></p> -->
     </div>
     <!-- Contact -->
     <div class="container-fluid bg-3 text-center" id="contact">
