--- a/index.html
+++ b/index.html
@@ -43,8 +43,10 @@
     <!-- My projects -->
     <div class="container-fluid bg-2 text-center" id="project">
         <h3 class="margin">My projects</h3>
+        <p><a href="https://anchi84.github.io/todo-app/" target="_blank">Todo App</a></p>
         <p><a href="https://anchi84.github.io/nyt/" target="_blank">NYT Archive Explorer</a></p>
         <p><a href="https://anchi84.github.io/Pomodorist/" target="_blank">Pomodorist</a></p>
+        <p><a href="https://anchi84.github.io/tictactoe/" target="_blank">Tic Tac Toe</a></p>
         <p><a href="https://anchi84.github.io/passwordStrengthChecker/" target="_blank">Password Strength Checker</a></p>
         <p><a href="https://anchi84.github.io/jmbg/" target="_blank">JMBG Validator</a></p>
     </div>
