--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
     <!-- My projects -->
     <div class="container-fluid bg-2 text-center" id="project">
         <h3 class="margin">My projects</h3>
-        <p><a href="https://nikmargit.github.io/todo-app-mma/" target="_blank">Todo App</a></p>
-        <p>Email: a@x.com    Password: 123</p>
+        <p><a href="https://nikmargit.github.io/todo-app-mma/" target="_blank">Todo App</a> (Email: a@x.com  Password: 123)</p> 
         <p><a href="https://anchi84.github.io/nyt/" target="_blank">NYT Archive Explorer</a></p>
         <p><a href="https://anchi84.github.io/Pomodorist/" target="_blank">Pomodorist</a></p>
         <p><a href="https://anchi84.github.io/tictactoe/" target="_blank">Tic Tac Toe</a></p>
