--- a/index.html
+++ b/index.html
@@ -43,12 +43,14 @@
     <!-- My projects -->
     <div class="container-fluid bg-2 text-center" id="project">
         <h3 class="margin">My projects</h3>
-        <p><a href="https://nikmargit.github.io/todo-app-mma/" target="_blank">Todo App</a> (Email: a@x.com  Password: 123)</p> 
-        <p><a href="https://anchi84.github.io/nyt/" target="_blank">NYT Archive Explorer</a></p>
-        <p><a href="https://anchi84.github.io/Pomodorist/" target="_blank">Pomodorist</a></p>
-        <p><a href="https://anchi84.github.io/tictactoe/" target="_blank">Tic Tac Toe</a></p>
-        <p><a href="https://anchi84.github.io/passwordStrengthChecker/" target="_blank">Password Strength Checker</a></p>
-        <p><a href="https://anchi84.github.io/jmbg/" target="_blank">JMBG Validator</a></p>
+        <p><a href="https://anchi84.github.io/todo-app-vue" target="_blank">Todo App</a> (kredencijali: 'admin@todo.app/nimda' ili 'guest@todo.app/guest')</p>
+        <p><a href="https://anchi84.github.io/statistics-vue" target="_blank">Statistics</p>
+        <p><a href="https://anchi84.github.io/web-shop-vuex" target="_blank">Web shop</p>
+        <p><a href="https://nikmargit.github.io/todo-app-mma" target="_blank">Todo App</a> (Email: a@x.com  Password: 123)</p> 
+        <p><a href="https://anchi84.github.io/Pomodorist" target="_blank">Pomodorist</a></p>
+        <p><a href="https://anchi84.github.io/tictactoe" target="_blank">Tic Tac Toe</a></p>
+        <p><a href="https://anchi84.github.io/passwordStrengthChecker" target="_blank">Password Strength Checker</a></p>
+        <p><a href="https://anchi84.github.io/jmbg" target="_blank">JMBG Validator</a></p>
     </div>
     <!-- Contact -->
     <div class="container-fluid bg-3 text-center" id="contact">
